[package]
name = "rust_cards"
version = "0.1.0"
authors = ["VilleTii"]

[dependencies]
pool_barrier = "0.1.1"
rand = "0.5.5"

# Serde SERialize DEserialize
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

json = "0.11.13"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false